# rag-csv-crew

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  QUICKSTART.md  README.md  docker-compose.yml  launch.py  pyproject.toml  queries.sql
.github/workflows/: ci.yml  release.yml
.specify/: feature-schema-inspector.md
.specify/feature-schema-inspector/: tasks.md
.specify/memory/: constitution.md
.specify/tasks/: migrate-to-alembic.md
backend/: .env.example  __init__.py
backend/docs/: SECURITY_AUDIT.md
backend/scripts/: add_agent_logs_column.py  add_progress_message_column.py  add_query_params_column.py
backend/src/: main.py
backend/src/api/: auth.py  dataset_rows.py  datasets.py  dependencies.py  health.py  queries.py  utils.py
backend/src/crew/: agents.py  tasks.py  tools.py
backend/src/db/: connection.py  migrations.py  retry.py  schemas.py
backend/src/middleware/: rate_limit.py
backend/src/models/: __init__.py  config.py  dataset.py  dataset_rows.py  fusion.py  index_metadata.py  query.py  user.py
backend/src/services/: auth.py  column_metadata.py  cross_reference.py  data_value_search.py  hybrid_search.py  index_manager.py  ingestion.py  query_execution.py  query_history.py  response_generator.py  result_fusion.py  schema_inspector.py  schema_manager.py  strategy_dispatcher.py  text_to_sql.py  vector_search.py
backend/src/utils/: __init__.py  csv_validator.py  error_messages.py  exceptions.py  llm_config.py  logging.py  progress_tracker.py  rate_limiter.py
backend/tests/: conftest.py
backend/tests/fixtures/: cross_dataset_questions.json
backend/tests/integration/: test_automatic_joins.py  test_cross_reference_detection.py  test_cross_reference_storage.py
backend/tests/performance/: load_test.py  test_cross_dataset_accuracy.py
backend/tests/unit/crew/: test_sql_generator_joins.py
backend/tests/unit/services/: test_dataset_resolution.py  test_relationship_classification.py
backend/tests/usability/: protocol.md
examples/: README.md  customers.csv  sales.csv
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/Auth/: Login.css  Login.tsx
frontend/src/components/CircuitBoard/: CircuitBoard.css  CircuitBoard.tsx
frontend/src/components/CursorSnake/: CursorSnake.css  CursorSnake.tsx
frontend/src/components/Dashboard3D/: CRTTerminal.tsx  Database.tsx  DotMatrixPrinter.tsx  NeonScene.tsx  PocketWatch.tsx  TapeDrive.tsx
frontend/src/components/Dataset/: AssemblyLine3D.css  AssemblyLine3D.tsx  BeakerProgress.css  BeakerProgress.tsx  (+15 more)
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.css  Dashboard.tsx  DatasetInspector.css  DatasetInspector.tsx  Datasets.css  Datasets.tsx  History.css  History.tsx  NotFound.css  NotFound.tsx  Query.css  Query.tsx  Upload.css  Upload.tsx
frontend/src/services/: api.ts  auth-storage.ts  auth.ts  dataset-rows.ts  datasets.ts  queries.ts
frontend/src/types/: index.ts
frontend/src/utils/: pageTransition.css  pageTransition.ts
frontend/tests/: App.test.tsx  setup.ts
frontend/tests/context/: auth-context.test.tsx
frontend/tests/integration/: query-polling.test.tsx
frontend/tests/services/: api.test.ts  auth-storage.test.ts  auth.test.ts  datasets.test.ts  queries.test.ts
sample_data/: analysis.csv  countries_of_the_world.csv  exclusivity.csv  patent.csv  periodic_elements_safe.csv
scripts/: check_local_var_types.py  init-db.sql
specs/001-rag-csv-crew/: data-model.md  design-system.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-csv-crew/checklists/: comprehensive.md  requirements.md
specs/001-rag-csv-crew/contracts/: openapi.yaml
specs/002-schema-inspector/: MEMORY.md  tasks.md
specs/003-index-aware-sql/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-index-aware-sql/checklists/: comprehensive.md  requirements.md
specs/003-index-aware-sql/contracts/: index-metadata-service.md  ingestion-pipeline.md  sql-generation-task-context.md
specs/004-parallel-query-fusion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-parallel-query-fusion/checklists/: full-feature.md  requirements.md
specs/004-parallel-query-fusion/contracts/: multi-strategy-sql-generation.md  parallel-query-execution.md  response-generator.md  result-fusion-service.md  strategy-dispatcher.md
tests/: conftest.py
tests/contract/: test_auth_contract.py  test_datasets_contract.py  test_health_contract.py  test_queries_contract.py
tests/e2e/: README.md  __init__.py  test_complete_flow.py
tests/fixtures/: semantic_questions.json
tests/integration/: test_app_init.py  test_column_embeddings.py  test_connection_pool.py  test_crew_orchestration.py  test_csv_ingestion.py  test_db_migrations.py  test_db_retry.py  test_embedding_generation.py  test_hybrid_deduplication.py  test_hybrid_search.py  test_index_creation.py  test_query_execution.py  test_query_history.py  test_router_registration.py  test_schema_manager.py  test_system_schema.py  test_user_schema.py  test_vector_index.py  test_vector_similarity.py
tests/performance/: test_semantic_matching.py
tests/unit/: test_main_exceptions.py
tests/unit/api/: test_dependencies.py
tests/unit/crew/: test_keyword_agent.py  test_result_analyst_agent.py  test_sql_generation_task.py  test_sql_generator_agent.py  test_vector_agent.py
tests/unit/models/: test_config.py  test_dataset.py  test_fusion_models.py  test_index_metadata.py  test_query.py  test_response.py  test_user.py
tests/unit/services/: test_auth.py  test_clarification.py  test_confidence_detection.py  test_fulltext_search.py  test_index_manager.py  test_ingestion_format.py  test_ingestion_schema.py  test_query_execution.py  test_response_generator.py  test_result_fusion.py  test_strategy_dispatcher.py  test_text_to_sql.py  test_vector_search_embeddings.py
tests/unit/utils/: test_logging.py  test_logging_schema.py
(+46 files in other folders)
